<resources>
    <string name="app_name">VeriParkApp</string>
    <string name="login_button_text">IMKB Hisse Senetleri/Endeksler</string>
    <string name="login_app_bar_title">IMKB Hisse ve Endeksler</string>
    <string name="home_app_bar_title">IMKB Hisse Senetleri ve Endeksler</string>
    <string name="login_page_logo_text">VERİPARK</string>


    <!--Drawer -->

    <string name="drawer_header_sub_title">IMKB Hisse Senetleri/Endeksler</string>
    <string name="drawer_header_title">VERİPARK</string>

    <string name="drawer_menu_all">Hisse ve Endeksler</string>
    <string name="drawer_menu_increasing">Yükselenler</string>
    <string name="drawer_menu_decreasing">Düşenler</string>
    <string name="drawer_menu_volume_30">Hacme Göre-30</string>
    <string name="drawer_menu_volume_50">Hacme Göre-50</string>
    <string name="drawer_menu_volume_100">Hacme Göre-100</string>

    <string name="search_view_hint">Ara</string>

    <!--Stock Table -->
    <string name="stock_table_column_symbol">Sembol</string>
    <string name="stock_table_column_price">Fiyat</string>
    <string name="stock_table_column_difference">Fark</string>
    <string name="stock_table_column_volume">Hacim</string>
    <string name="stock_table_column_bid">Alış</string>
    <string name="stock_table_column_offer">Satış</string>
    <string name="stock_table_column_changing">Değişim</string>

    <!--Detail Page -->

    <string name="detail_page_symbol">Sembol: %1$s</string>
    <string name="detail_page_daily_lowest">Günlük Düşük: %1$s</string>
    <string name="detail_page_price">Fiyat: %1$s</string>
    <string name="detail_page_daily_highest">Günlük Yüksek: %1$s</string>
    <string name="detail_page_difference">\%% Fark: %1$s</string>
    <string name="detail_page_count">Adet:  %1$d</string>
    <string name="detail_page_volume">Hacim:  %1$s</string>
    <string name="detail_page_minimum">Tavan: %1$s</string>
    <string name="detail_page_bid">Alış: %1$s</string>
    <string name="detail_page_maximum">Taban:  %1$s</string>
    <string name="detail_page_offer">Satış: %1$s</string>
    <string name="detail_page_change">Değişim: </string>



</resources>