<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_period_all"
        android:title="@string/drawer_menu_all"
        android:checkable="true"
        />
    <item
        android:id="@+id/menu_period_increasing"
        android:title="@string/drawer_menu_increasing"
        android:checkable="true"
        />
    <item
        android:id="@+id/menu_period_decreasing"
        android:title="@string/drawer_menu_decreasing"
        android:checkable="true"
        />
    <item
        android:id="@+id/menu_period_volume_30"
        android:title="@string/drawer_menu_volume_30"
        android:checkable="true"
        />
    <item
        android:id="@+id/menu_period_volume_50"
        android:title="@string/drawer_menu_volume_50"
        android:checkable="true"
        />
    <item
        android:id="@+id/menu_period_volume_100"
        android:title="@string/drawer_menu_volume_100"
        android:checkable="true"
        />
</menu>