<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp"
    android:background="@color/tableHeaderColor"
    android:weightSum="7"
    tools:viewBindingIgnore="true"
    android:id="@+id/table_header_container">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/stock_table_column_symbol"
        android:textSize="12sp"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:layout_marginHorizontal="4dp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/stock_table_column_price"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="4dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/stock_table_column_difference"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="4dp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/stock_table_column_volume"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="4dp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/stock_table_column_bid"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="4dp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/stock_table_column_offer"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="4dp"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/stock_table_column_changing"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="4dp"/>
</LinearLayout>